--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+    .md-datepicker-calendar-pane {
+        z-index: 2000 !important;
+    }
+</style>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
